0.13-beta to current

	Fixed segfault on trying to expand "~username" path prefix with a huge
	length of the user name.

	Fixed user mappings replacing a mapping from Lua in an incomplete way
	which could lead to assertion or some unpredictable behaviour.

	Fixed map menus not listing mappings that accept a selector.

0.12.1 to 0.13-beta (2023-03-17)

	Changed implementation of `:compare grouppaths` to juxtapose only files
	with identical relative paths.  Patch by Alexandr Keyp (a.k.a. IAmKapuze).

	Changed use of `$(filter-out)` in src/Makefile.am to `$(var:from=to)`
	substitution to get rid of a warning on configuration.

	Changed how pthread support is detected by configure script to handle more
	cases.  Thanks to Markus Elfring (a.k.a. elfring).

	Changed configure script to fail if neither perl nor vim is available
	instead of failing to generate tags for Vim-style documentation.  Thanks
	to Sergei Trofimovich (a.k.a. trofi).

	Changed %N macro to also not start a process group for a command.  Thanks
	to Oskar Grunning (a.k.a. sQVe).

	Changed error reporting for some of the :commands such that now their
	failures cause a dialog to appear on sourcing, previously those errors
	were printed only to status bar.

	Added "withicase" and "withrcase" to :compare that force ignoring and
	respecting case respectively on comparing file names and paths.  Thanks to
	Jose Riha (a.k.a. jose1711).

	Added printing stats while in :compare mode.  Patch by Alexandr
	Keyp (a.k.a. IAmKapuze).

	Added "columncount:" value to 'lsoptions' to always display fixed number of
	columns.  Thanks to Aleksandr Vysotskiy (a.k.a. loki1368).

	Added show* arguments to :compare command to control/switch which sets of
	files are displayed (toggling is done by :compare!).  Patch by Alexandr
	Keyp (a.k.a. IAmKapuze).

	Added builtin handling of mouse events.  Patch by 高浩亮 (a.k.a.
	haolian9).  Thanks to ranousse, Sergei Shilovsky and user451421541757324.
