@@ -1,5 +1,8 @@
 0.13-beta to current
 
+	Made "withicase" and "withrcase" affect how files are sorted before
+	comparison, otherwise they might not produce the intended effect.
+
 	Fixed segfault on trying to expand "~username" path prefix with a huge
 	length of the user name.
 
